# gt-endurance-racing-broadcast

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  release-please-config.json  ruff.toml
.claude/: settings.json
.claude/hooks/: post_merge_reminder.py  record_ui_verified.py  ui_visual_verify_gate.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  e2e-binary.yml  gitleaks.yml  pages.yml  pr-title-lint.yml  preview-cleanup.yml  preview.yml  release-please.yml  release.yml  wiki.yml
docs/: CHANGELOG-archive.md
profiles/demo/: profile.env
profiles/example/: profile.env
profiles/solo-commentary/: profile.env
profiles/solo-pov/: profile.env
src/: iro.py  iro_ui.py  racecast.py  racecast_ui.py  setup-assets.py
src/assets/: app-icon.icns
src/cockpit/: cockpit.html
src/companion/: iro-buttons.companionconfig  racecast-buttons.companionconfig
src/console/: buttons.html  console.html  health-monitor.html
src/director/: director-panel.html
src/docs/: Broadcast_Setup_Guide.md  IRO_Broadcast_Setup_Guide.md  IRO_cheat_sheets.html  README_SETUP.md  cheat_sheets.html
src/obs/: GT_Endurance.json  GT_Racing_Endurance.json  GT_Racing_Solo_Commentary.json  GT_Racing_Solo_POV.json  GT_Solo_Commentary.json  GT_Solo_POV.json  IRO_Endurance.json  hud-preview.html  hud.html  (+3 more)
src/obs/obs-browser-build/: CMakeLists.txt
tests/: test_app_version.py  test_backup.py  test_bind.py  test_bootstrap.py  test_brands.py  test_broadcast_chat.py  test_build.py  test_build_binary.py  test_chat.py  test_cockpit.py  test_companion.py  test_companion_linux.py  test_config.py  test_console.py  test_console_gate.py  test_console_proxy.py  test_cookies.py  test_cues.py  test_director_panel.py  test_discord_audio.py  test_discord_oauth.py  test_discord_rpc.py  test_discord_web.py  test_e2e.py  test_event.py  test_event_notes.py  test_event_title.py  test_fanout.py  test_feed_preview.py  test_flag_graphic.py  test_fonts.py  test_funnel_setup.py  test_graphics.py  test_gt7_crypto.py  test_gt7_discovery.py  test_gt7_fixture.py  test_gt7_telemetry.py  test_health.py  test_health_store.py  test_http_util.py  (+62 more)
tools/: add_intermission_scene.py  add_pov_source.py  add_standby_cover.py  add_weather_sources.py  broadcast-chat-probe.py  build-binary.py  build-diagrams.py  build-trailer.py  build-walkthrough-videos.py  build.py  check-slides.py  check-wiki-links.py  check_portable.py  derive-solo-templates.py  e2e.py  e2e_checks.py  fanout-backpressure-check.py  fanout-soak.py  fetch-flags.py  fetch-fonts.py  fetch-reveal.py  gt7-telemetry-probe.py  intermission-demo.html  lint.py  make-icons.py  make-placeholders.py  multifeed-429-probe.py  multifeed-scenario-probe.py  obs-freeze-probe.py  obs-sim.py  preview_meta.py  run-relay.py  run-tests.py  strip_companion_pass.py  swap-hud-overlay.py  sync-assets.py  sync-wiki.py  test-install-container.py  tokenize-obs.py  walkthrough_core.py
(+458 files in other folders)
